    Add various bugfix patches from upstream
    - In particular, dealing with the possibility that EOPNOTSUPP != ENOTSUP
      should fix test failures on hppa.
  * d/p/2017.13/tests-Add-test-pull-bareuseronly.patch:
    Add more test coverage from upstream
    - d/rules: Make the new test executable
  * d/test.sh: Clean up ostree-trivial-httpd processes

 -- Simon McVittie <smcv@debian.org>  Mon, 16 Oct 2017 10:13:54 +0100

ostree (2017.12-1) unstable; urgency=medium

  * New upstream release
    - Drop all current patches, applied upstream
    - Update symbols file
  * Add some post-release bug fix patches
  * Simplify autopkgtest now that test-local-pull seems to be stable
  * Unexport HTTP proxy variables in autopkgtest to work around lack of
    support for no_proxy, which breaks the tests on Ubuntu autopkgtest.
    We don't actually need Internet access, so this is OK.
  * debian/test.sh: Unexport HTTP proxy variables for build-time tests
    too
  * Make build-time test failures fatal if they fail at least twice
    out of 5 tries (previously they had to fail at least 3 times)
  * Add patch to reinstate test-libglnx-shutil.c, which was missed out
    of the upstream tarball

 -- Simon McVittie <smcv@debian.org>  Tue, 03 Oct 2017 22:47:48 +0100

ostree (2017.11-2) unstable; urgency=medium

  * Replace patch with the version applied upstream in 2017.12
  * Standards-Version: 4.1.0 (no changes)
  * Add a patch to fix FTBFS in non-English locales
  * Add a patch to fix FTBFS if building as root with umask != 022,
    which for some reason debomatic does (Closes: #876138)
  * Add a patch from upstream to fix undefined behaviour with
    O_RDONLY|O_CREAT in rofiles-fuse

 -- Simon McVittie <smcv@debian.org>  Fri, 22 Sep 2017 15:48:24 +0100

ostree (2017.11-1) unstable; urgency=medium

  * New upstream release
    - Drop all current patches, applied upstream
    - Update symbols file
  * Adjust Description and Upstream-Name to emphasize libostree