@@ -24,6 +24,8 @@ ostree (2017.12-2) UNRELEASED; urgency=medium
     Add more test coverage from upstream
     - d/rules: Make the new test executable
   * d/test.sh: Clean up ostree-trivial-httpd processes
+  * d/test.sh: Don't repeat build-time tests if they fail once. They seem
+    to be somewhat reliable now.
 
  -- Simon McVittie <smcv@debian.org>  Mon, 16 Oct 2017 10:13:54 +0100
 
